# pyorm

./: .gitignore  README.md  database.db  pyproject.toml
pyorm/: base.py  connection.py  main.py  utils.py
